@@ -246,6 +246,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * Links with no title but a curid parameter now use the curid to pick a page
 * (bug 10323) Special:Undelete should have "inverse selection" button
 * (bug 15831) Modern skin RTL support is bugous
+* (bug 15869) Nostalgia skin does not show page title in printable mode
 
 === API changes in 1.14 ===
 
